--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ footer {
 
 .column {
   display: grid;
-  grid-template-columns: repeat(2, 50%);
+  grid-template-columns: 1fr 1fr;
 }
 
 .ingredients,
@@ -123,4 +123,11 @@ footer {
   flex-direction: column;
   gap: 10px;
   margin-bottom: 20px;
+}
+
+@media screen and (max-width: 850px) {
+  .column {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
