--- a/css/style.css
+++ b/css/style.css
@@ -130,4 +130,15 @@ footer {
     display: grid;
     grid-template-columns: 1fr;
   }
+
+  .image-card {
+    border: none;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .image-card p {
+    padding: 20px;
+    text-indent: 10px;
+  }
 }
